fix:background img too large

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 @layer base {
   body {
     @apply p-0 m-0 flex items-center justify-center min-h-screen;
-    background-color: rgb(59, 76, 160);
     background-size: 400px;
     font-family: sans-serif;
     font-weight: 300;
